src/objects/DD_Alternate_References__c.object
<CustomObject>
    <fields>
        <fullName>DD_Provider__c</fullName>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Alternate Reference Numbers</relationshipLabel>
        <relationshipName>DEL_Alternate_References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DD_Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Reference_Type__c</fullName>
        <label>Reference Type</label>
        <picklist>
            <picklistValues>
                <fullName>DFMS ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMAP Atypical Provider Id</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSF TIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I-SATS Id “MH”</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I-SATS Id “SA”</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Provider Id</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OIS Vendor Id</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OMS Department Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payee SSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBH Agency Code</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Alternate Reference</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alternate References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>